--- a/public/data_src/product/Кляймер/text.html
+++ b/public/data_src/product/Кляймер/text.html
@@ -2,7 +2,7 @@
 <p><b>Кляммер для крепления керамогранита</b> - элемент, входящий в систему вентилируемых фасадов служит для крепления
     плиты из керамогранита. Данная продукция выполняется из оцинкованной и нержавеющей стали (AISI 430;304) толщиной
     1-1,2 мм.</p>
-<p>Выбор материала для изготовления подсистемы в целом зависит зависит от условий эксплуатации, особенностей внешней
+<p>Выбор материала для изготовления подсистемы в целом зависит от условий эксплуатации, особенностей внешней
     окружающей среды и климатических условий.</p>
 <p>
     Кляммер для крепления керамогранита монтируется на несущие конструкции вентилируемого фасада при помощи винтов
