--- a/public/data_src/product/Профили Направляющие/text_png.html
+++ b/public/data_src/product/Профили Направляющие/text_png.html
@@ -1,10 +1,10 @@
 <h2>Профиль монтажный для вентилируемых фасадов</h2>
-<h3>Направляющие профиля</h3>
+<h3>Профиль направляющий</h3>
 <p><b>Профили направляющие (ПНГ, ПНП, ПНZ)</b> - это элементы, являющиеся основой несущего каркаса вентилируемого
     фасада. Данная продукция выполняется из оцинкованной и нержавеющей стали (AISI 430;304) толщиной 1-1,2 мм.</p>
 <p>Выбор материала для изготовления подсистемы в целом зависит от условий эксплуатации (особенностей внешней окружающей
     среды и климатических условий).</p>
-<p>Профили, направляющие крепят к кронштейнам, а также и между собой вытяжными заклёпками из нержавеющей стали диаметром
+<p>Профили направляющие крепят к кронштейнам, а также и между собой вытяжными заклёпками из нержавеющей стали диаметром
     4,8 мм или саморезом 5,5*19 с ЭПДМ прокладкой.</p>
 
 <ul>
