--- a/public/data_src/product/Металлокасеты/text.html
+++ b/public/data_src/product/Металлокасеты/text.html
@@ -1,7 +1,7 @@
 <h2>Металлокассета</h2>
 <p><b>Металлокассета</b> - деталь, которая крепиться к обрешётке вентилируемого фасада при помощи винтов саморезов по
-    металлу или вытяжными заклепками, выполненными из нержавеющий, стали. Металлокассета относиться к облицовочному
-    материалу выполняется из оцинкованной стали с последующим нанесением порошкового окрашивания в разные цвета. </p>
+    металлу или вытяжными заклепками, выполненными из нержавеющий стали. Металлокассета относиться к облицовочному
+    материалу, выполняется из оцинкованной стали с последующим нанесением порошкового окрашивания в разные цвета. </p>
 <p>При помощи данного изделия осуществляется быстрый ремонт фасада здания с современной архитектурой, способствующий
     сделать здание красивым и красочным, а также защитить стены зданий и сооружений от внешних осадков и воздействия
     внешней окружающий среды.</p>
