--- a/public/data_src/services/cold_stamps/text.html
+++ b/public/data_src/services/cold_stamps/text.html
@@ -1,14 +1,14 @@
 <p><b>Листовая штамповка</b> - способ изготовления плоских и объемных тонкостенных изделий из листов, полос или лент с
     помощью штампов. Она характеризуется высокой производительностью, стабильностью качества и точности, большой
     экономией металла, низкой себестоимостью изготовляемых изделий и возможностью полной автоматизации.</p>
-<p>Холодная листовая штамповка нашла широкое применение в сельском хозяйстве; машиностроение; авиастроение;
+<p>Холодная листовая штамповка нашла широкое применение в сельском хозяйстве, машиностроении, авиастроении,
     электротехнической и оборонной промышленности; общепите; строительстве и т.д. Продукция, произведенная методом
     холодной штамповки может быть различной формой</p>
 <ol>
     <li>Холодная штамповка методом вырубки - это детали плоской формы имеющие габаритные размеры с технологическими
         отверстиями выполнена из листа или заготовки в виде полосы или штрипса.</li>
     <li>Холодная штамповка методом вырубки и гибки – это детали плоской формы имеющие габаритные размеры с
-        технологическими отверстиями с последующие гибкой придавая объём детали с определенной конфигурацией выполнена
+        технологическими отверстиями с последующей гибкой придавая объём детали с определенной конфигурацией, выполнена
         из листа или заготовки в виде полосы или штрипса.</li>
     <li>Холодная штамповка методом вытяжки- это деталь, произведенная из плоского листа или заготовки с вытяжкой
         отверстий или габаритных форм.</li>
@@ -30,6 +30,6 @@
     <li>Гибка металла;</li>
     <li>Холодная штамповка;</li>
     <li>Дробеструйная очистка;</li>
-    <li>Лазерная сварка металла;</li>
+    <li>Лазерная сварка металла.</li>
 </ul>
 <p>Все производимые заказы выполняются строго по договору, с учетом требования заказчика.</p>
