--- a/public/data_src/services/laser_svarka/text.html
+++ b/public/data_src/services/laser_svarka/text.html
@@ -51,6 +51,6 @@
     <li>Гибка металла;</li>
     <li>Холодная штамповка;</li>
     <li>Дробеструйная очистка;</li>
-    <li>Лазерная сварка металла;</li>
+    <li>Лазерная сварка металла.</li>
 </ul>
 <p>Все производимые заказы выполняются строго по договору, с учетом требования заказчика.</p>
