--- a/public/data_src/services/poroshok_color/text.html
+++ b/public/data_src/services/poroshok_color/text.html
@@ -5,11 +5,9 @@
     выравнивающими агентами, модификаторами потока, отвердителями, а также другими добавками. Эти ингредиенты
     смешиваются, расплавляются, охлаждаются, при этом процессе получается однородное покрытие. Порошковое окрашивание
     получается более твёрдым, прочным, износостойким, чем обычное ЛКП,а также окрашенная поверхность имеет более
-    гладкую, полированную поверхность. Чаще всего производится порошковая покраска металлических предметов. Новые
-    технологии позволяют красить таким способом также другие материалы, такие как пластмассы, композиты, углеродное
-    волокно, МДФ.
-    . Это может быть термопласт или термореактивный полимер.
+    гладкую, полированную поверхность. Чаще всего производится порошковая покраска металлических предметов.
 </p>
+
 <h3>Каковы преимущества порошковой краски?</h3>
 <p>Порошковая краска обладает уникальным набором преимуществ:</p>
 <ul>
@@ -57,6 +55,6 @@
     <li>Гибка металла;</li>
     <li>Холодная штамповка;</li>
     <li>Дробеструйная очистка;</li>
-    <li>Лазерная сварка металла;</li>
+    <li>Лазерная сварка металла.</li>
 </ul>
 <p>Все производимые заказы выполняются строго по договору, с учетом требования заказчика.</p>
