--- a/public/data_src/services/uslugi_gibkmetal/text.html
+++ b/public/data_src/services/uslugi_gibkmetal/text.html
@@ -1,11 +1,11 @@
 <p><b>Гибка металла</b> - это фундаментальный процесс в металлообработке и обрабатывающей промышленности. Он включает в
-    себя придание формы металлическому объекту путем приложения давления или нагрева для его деформации.
+    себя придание формы металлическому объекту путем приложения давления для его деформации.
     В момент гибки металла - происходит процесс преобразования металлического объекта в определенную форму путем
     манипулирования его физическими свойствами. Наиболее часто используемыми металлами для гибки являются алюминий,
-    сталь и медь, благодаря их высокой пластичности и ковкости.
+    сталь и медь, благодаря их высокой пластичности.
     Процесс гибки металла включает три основных этапа: настройку оборудования, формовку металла и отделку изделия.
     Оборудование, используемое для гибки металла, включает гидравлические листогибочные прессы, листогибы и гибочные
-    станки вальцы, трубогибы.
+    станки, вальцы, трубогибы.
 </p>
 <p>Техника гибки металла зависит от типа используемого металла и желаемой формы изделия. Некоторые из наиболее
     распространенных методов включают</p>
@@ -29,7 +29,7 @@
 <h4>Электроника</h4>
 <p>Гибка металла используется в электронной промышленности для производства различных компонентов, включая корпуса,
     радиаторы и шасси.</p>
-<p><strong>Заключение</strong></p>
+
 <p><b>Гибка металла </b> - это жизненно важный процесс в металлообрабатывающей и обрабатывающей промышленности, в
     котором используются различные методы и инструменты для придания металлическим предметам определенных форм. От
     строительства и автомобильной промышленности до производства металла и электроники, гибка металла имеет множество
@@ -52,6 +52,6 @@
     <li>Гибка металла;</li>
     <li>Холодная штамповка;</li>
     <li>Дробеструйная очистка;</li>
-    <li>Лазерная сварка металла;</li>
+    <li>Лазерная сварка металла.</li>
 </ul>
 <p>Все производимые заказы выполняются строго по договору, с учетом требования заказчика.</p>
