--- a/public/data_src/product/ККУ/text.html
+++ b/public/data_src/product/ККУ/text.html
@@ -1,7 +1,5 @@
 <h2>Кронштейн крепёжный усиленный</h2>
-<p>Крепёжный кронштейн, усиленный для вентилируемого фасада - деталь, при помощи которой крепиться направляющие профили
-    к стене здания. Данные элементы изготавливаются из оцинкованной стали, имеют стандартную толщину — 1,2; или 2 мм, а
-    также рабочую длину от 50 и до 300 мм.</p>
+<p>Крепёжный кронштейн, усиленный для вентилируемого фасада - деталь, при помощи которой крепится направляющие профили к стене здания. Данные элементы изготавливаются из оцинкованной стали, имеют стандартную толщину — 1,2; или 2 мм, а также рабочую длину от 50 и до 300 мм.</p>
 <ul>
     <li>ККу 90х80х90</li>
     <li>ККу 90х80х120</li>
