--- a/public/data_src/product/Кронштейн/text.html
+++ b/public/data_src/product/Кронштейн/text.html
@@ -1,7 +1,5 @@
-<h2>Кронштейн крепежный для вентилируемого фасада </h2>
-<p><b>Кронштейн крепежный для вентилируемого фасада</b> - деталь, при помощи которой крепиться направляющие профили к
-    стене здания. Данные элементы изготавливаются из оцинкованной стали, имеют стандартную толщину — 1,2; или 2 мм, а
-    также рабочую длину от 50 и до 350 мм.</p>
+<h2>Кронштейн крепежный для вентилируемого фасада</h2>
+<p><strong>Кронштейн крепежный для вентилируемого фасада</strong> - деталь, при помощи которой крепиться направляющие профили к стене здания. Данные элементы изготавливаются из оцинкованной стали, имеют стандартную толщину — 1,2; или 2 мм, а также рабочую длину от 50 и до 350 мм.</p>
 
 <ul>
     <li>КК 50х50х50</li>
