--- a/public/data_src/product/Шайба прокладка/text_pr.html
+++ b/public/data_src/product/Шайба прокладка/text_pr.html
@@ -1,7 +1,6 @@
 
 <h3>Прокладка паронитовая</h3>
-<p><b>Прокладка паронитовая </b> - применяется в местах крепления кронштейна со стеной и служит для прерывания мостика
-    холода в местах соединения. Изготавливается из паронита ПОН-Б толщиной 2 мм.</p>
+<p><strong>Прокладка паронитовая</strong> - применяется в местах крепления кронштейна со стеной и служит для прерывания мостика холода в местах соединения. Изготавливается из паронита ПОН-Б толщиной 2 мм.</p>
 <ul>
     <li>ПП 50*50</li>
     <li>ПП 50*65</li>
