--- a/public/data_src/product/Шайба прокладка/text_sh.html
+++ b/public/data_src/product/Шайба прокладка/text_sh.html
@@ -1,6 +1,5 @@
 <h3>Шайба плоская</h3>
-<p><b>Шайба плоская квадратная </b> - используется для увеличения опорной площади крепления и препятствует повреждению
-    защитного слоя покрытия метала. Шайбы изготавливаются из оцинкованной стали толщиной 2 мм.</p>
+<p><strong>Шайба плоская квадратная</strong> - используется для увеличения опорной площади крепления и препятствует повреждению защитного слоя покрытия металла. Шайбы изготавливаются из оцинкованной стали толщиной 2 мм.</p>
 <ul>
     <li>ШПК 33*33 М10</li>
 </ul>
