--- a/public/data_src/services/cold_stamps/text.html
+++ b/public/data_src/services/cold_stamps/text.html
@@ -1,30 +1,27 @@
-<p><b>Листовая штамповка</b> - способ изготовления плоских и объемных тонкостенных изделий из листов, полос или лент с
-    помощью штампов. Она характеризуется высокой производительностью, стабильностью качества и точности, большой
-    экономией металла, низкой себестоимостью изготовляемых изделий и возможностью полной автоматизации.</p>
-<p>Холодная листовая штамповка нашла широкое применение в сельском хозяйстве, машиностроении, авиастроении,
-    электротехнической и оборонной промышленности; общепите; строительстве и т.д. Продукция, произведенная методом
-    холодной штамповки может быть различной формой</p>
-<ol>
-    <li>Холодная штамповка методом вырубки - это детали плоской формы имеющие габаритные размеры с технологическими
-        отверстиями выполнена из листа или заготовки в виде полосы или штрипса.</li>
-    <li>Холодная штамповка методом вырубки и гибки – это детали плоской формы имеющие габаритные размеры с
-        технологическими отверстиями с последующей гибкой придавая объём детали с определенной конфигурацией, выполнена
-        из листа или заготовки в виде полосы или штрипса.</li>
-    <li>Холодная штамповка методом вытяжки- это деталь, произведенная из плоского листа или заготовки с вытяжкой
-        отверстий или габаритных форм.</li>
-</ol>
-<p>При необходимости наше предприятие запустит серийное производство, станет </p>
+<p>Преобразовываем металл в точные формы. Точность, надежность и высокая производительность – наши стандарты.</p>
 
-<p><strong>Преимущества услуг нашей компании</strong></p>
-<p>АО «Главтехконструкция» предлагает профессиональные услуги. Преимуществам сотрудничества с нами является:</p>
+<p><strong>Листовая штамповка</strong> - способ изготовления плоских и объемных тонкостенных изделий из листов, полос или лент с помощью штампов. Она характеризуется высокой производительностью, стабильностью качества и точности, большой экономией металла, низкой себестоимостью изготовляемых изделий и возможностью полной автоматизации.</p>
+<p>Холодная листовая штамповка нашла широкое применение в сельском хозяйстве, машиностроении, авиастроении, электротехнической и оборонной промышленности; общепите; строительстве и т.д. Продукция, произведенная методом холодной штамповки может быть различной формой:</p>
+
 <ol>
-    <li>Новое современное оборудование позволяет быстро и качественно выполнить объёмы выпускаемой продукции,.</li>
-    <li>Высокая производительность оборудования и большие площади предприятия, позволяют брать крупные заказы и
-        выполнять их качественно в максимально сжатые сроки.</li>
-    <li>Опытные высококвалифицированные специалисты обладают большим опытом работы, что гарантирует высокое качество.
-    </li>
+    <li>Холодная штамповка методом вырубки - это детали плоской формы имеющие габаритные размеры с технологическими отверстиями выполнена из листа или заготовки в виде полосы или штрипса.</li>
+    <li>Холодная штамповка методом вырубки и гибки – это детали плоской формы имеющие габаритные размеры с технологическими отверстиями с последующей гибкой придавая объём детали с определенной конфигурацией, выполнена из листа или заготовки в виде полосы или штрипса.</li>
+    <li>Холодная штамповка методом вытяжки- это деталь, произведенная из плоского листа или заготовки с вытяжкой отверстий или габаритных форм.</li>
 </ol>
+
+<p>При необходимости наше предприятие запустит серийное производство.</p>
+
+<h2>Преимущества услуг нашей компании</h2>
+
+<p>АО «Главтехконструкция» предлагает профессиональные услуги. Преимуществом сотрудничества с нами является:</p>
+<ol>
+    <li>Новое современное оборудование позволяет быстро и качественно выполнить объёмы выпускаемой продукции.</li>
+    <li></li>Высокая производительность оборудования и большие площади предприятия, позволяют брать крупные заказы и выполнять их качественно в максимально сжатые сроки.</li>
+    <li>Опытные высококвалифицированные специалисты обладают большим опытом работы, что гарантирует высокое качество.</li>
+</ol>
+
 <p>Широкий ассортимент услуг:</p>
+
 <ul>
     <li>Порошковое окрашивание;</li>
     <li>Гибка металла;</li>
@@ -32,4 +29,5 @@
     <li>Дробеструйная очистка;</li>
     <li>Лазерная сварка металла.</li>
 </ul>
+
 <p>Все производимые заказы выполняются строго по договору, с учетом требования заказчика.</p>
