--- a/public/data_src/services/laser_svarka/text.html
+++ b/public/data_src/services/laser_svarka/text.html
@@ -1,56 +1,51 @@
-<p><b>Лазерная сварка</b> - это технология соединения металлов и других материалов плавлением, которое производится
-    благодаря нагреву рабочей зоны лазерным лучом. Технология часто применяется для высокоточного соединения деталей,
-    для сварки изделий, имеющих сложную конфигурацию соприкосновения, для соединения разнородных материалов, деталей
-    сверхмалых и крупных размеров, деталей, имеющих разные толщины. <b>Эта технология дает гладкий шов без следов
-        деформации в виде неровностей, искривлений, шероховатости</b>. </p>
-<p><strong>Общая характеристика</strong></p>
-<p>Лазерная сварка активно используется в промышленных масштабах для формирования высокоточного и неразъемного
-    соединения.</p>
-<p>Процесс этой технологии обеспечивает преобразование металлического элемента на стыке. Луч лазера способствует
-    процессу нагревания и дальнейшего плавления на обрабатываемом участке. Лазер создает световой поток с характерной
-    монохромность.
-    Длина волн идентична. Это упрощает контроль потоков при фокусировке линз или отклонения рабочих призм. Мощность
-    пуска повышается за счет появления волнового резонанса.
-</p>
-<p>В лазерной сварке можно найти много преимуществ, из-за чего она и стала более востребованной. Рассмотрим их поближе:
-</p>
+<p>ысокоточная сварка, оптимально подходит для деталей сложной формы и разнородных материалов.</p>
+
+<p><strong>Лазерная сварка</strong> - это технология соединения металлов и других материалов плавлением, которое производится благодаря нагреву рабочей зоны лазерным лучом. Технология часто применяется для высокоточного соединения деталей, для сварки изделий, имеющих сложную конфигурацию соприкосновения, для соединения разнородных материалов, деталей сверхмалых и крупных размеров, деталей, имеющих разные толщины. Эта технология дает гладкий шов без следов деформации в виде неровностей, искривлений, шероховатости.</p>
+
+<h2>Общая характеристика</h2>
+
+<p>Лазерная сварка активно используется в промышленных масштабах для формирования высокоточного и неразъемного соединения.</p>
+<p>Процесс этой технологии обеспечивает преобразование металлического элемента на стыке. Луч лазера способствует процессу нагревания и дальнейшего плавления на обрабатываемом участке. Лазер создает световой поток с характерной монохромность. Длина волн идентична. Это упрощает контроль потоков при фокусировке линз или отклонения рабочих призм. Мощность пуска повышается за счет появления волнового резонанса.</p>
+<p>В лазерной сварке можно найти много преимуществ, из-за чего она и стала более востребованной. Рассмотрим их поближе:</p>
+
 <ol>
     <li>Сварка лазером подходит для обработки многих материалов: различные магнитные сплавы и сплавы металла.</li>
     <li>Обладает высокой точностью. Траектория пятна нагревания отличается стабильностью.</li>
-    <li>Сварное соединение небольшого размера, из-за чего оно становится незаметным. </li>
-    <li>Область около шва не нагревается, поэтому деформация свариваемых элементов минимальна. </li>
-    <li>Во время нагревания не выражается рентгеновское излучение и не создаются продукты сгорания. </li>
-    <li>У сварочного процесса высокая химическая чистота, так как в процессе сварки не прибегают к дополнительным
-        электродам, флюсам и присадкам. </li>
-    <li>Отличный вариант для сварки в труднодоступных местах. </li>
-    <li>С помощью данной техники можно обработать материалы, которые находятся за прозрачными элементами. </li>
+    <li>Сварное соединение небольшого размера, из-за чего оно становится незаметным.</li>
+    <li>Область около шва не нагревается, поэтому деформация свариваемых элементов минимальна.</li>
+    <li>Во время нагревания не выражается рентгеновское излучение и не создаются продукты сгорания.</li>
+    <li>У сварочного процесса высокая химическая чистота, так как в процессе сварки не прибегают к дополнительным электродам, флюсам и присадкам.</li>
+    <li>Отличный вариант для сварки в труднодоступных местах.</li>
+    <li>С помощью данной техники можно обработать материалы, которые находятся за прозрачными элементами.</li>
     <li>Может применяться для сварки элементов, которые находятся за прозрачными материалами.</li>
-    <li>Созданным во время сварки сварным швам свойственны высокие показатели качества и прочности. </li>
-    <li>При переходе на создание нового изделия происходит быстрая перенастройка системы. </li>
+    <li>Созданным во время сварки сварным швам свойственны высокие показатели качества и прочности.</li>
+    <li>При переходе на создание нового изделия происходит быстрая перенастройка системы.</li>
     <li>Сварка лазером подходит для обработки многих материалов: различные магнитные сплавы и сплавы металла.</li>
     <li>Обладает высокой точностью. Траектория пятна нагревания отличается стабильностью.</li>
-    <li>Сварное соединение небольшого размера, из-за чего оно становится незаметным. </li>
-    <li>Область около шва не нагревается, поэтому деформация свариваемых элементов минимальна. </li>
-    <li>Во время нагревания не выражается рентгеновское излучение и не создаются продукты сгорания. </li>
-    <li>У сварочного процесса высокая химическая чистота, так как в процессе сварки не прибегают к дополнительным
-        электродам, флюсам и присадкам. </li>
-    <li>Отличный вариант для сварки в труднодоступных местах</li>
+    <li>Сварное соединение небольшого размера, из-за чего оно становится незаметным.</li>
+    <li>Область около шва не нагревается, поэтому деформация свариваемых элементов минимальна.</li>
+    <li>Во время нагревания не выражается рентгеновское излучение и не создаются продукты сгорания.</li>
+    <li>У сварочного процесса высокая химическая чистота, так как в процессе сварки не прибегают к дополнительным электродам, флюсам и присадкам.</li>
+    <li>Отличный вариант для сварки в труднодоступных местах.</li>
 </ol>
-<p><strong>Преимущества услуг нашей компании</strong></p>
-<p>АО «Главтехконструкция» предлагает профессиональные услуги. Преимуществам сотрудничества с нами является:</p>
+
+<h2>Преимущества услуг нашей компании</h2>
+<p>АО «Главтехконструкция» предлагает профессиональные услуги. Преимуществом сотрудничества с нами является:</p>
+
 <ol>
-    <li>Новое современное оборудование позволяет быстро и качественно выполнить объёмы выпускаемой продукции,.</li>
-    <li>Высокая производительность оборудования и большие площади предприятия, позволяют брать крупные заказы и
-        выполнять их качественно в максимально сжатые сроки.</li>
-    <li>Опытные высококвалифицированные специалисты обладают большим опытом работы, что гарантирует высокое качество.
-    </li>
+    <li>Новое современное оборудование позволяет быстро и качественно выполнить объёмы выпускаемой продукции.</li>
+    <li>Высокая производительность оборудования и большие площади предприятия, позволяют брать крупные заказы и выполнять их качественно в максимально сжатые сроки.</li>
+    <li>Опытные высококвалифицированные специалисты обладают большим опытом работы, что гарантирует высокое качество.</li>
 </ol>
-<p>Широкий ассортимент услуг:</p>
+
+<h2>Широкий ассортимент услуг:</h2>
+
 <ul>
     <li>Порошковое окрашивание;</li>
     <li>Гибка металла;</li>
     <li>Холодная штамповка;</li>
     <li>Дробеструйная очистка;</li>
-    <li>Лазерная сварка металла.</li>
+    <li>Лазерная сварка металла.   </li>
 </ul>
+
 <p>Все производимые заказы выполняются строго по договору, с учетом требования заказчика.</p>
