--- a/public/data_src/services/uslugi_gibkmetal/text.html
+++ b/public/data_src/services/uslugi_gibkmetal/text.html
@@ -1,52 +1,41 @@
-<p><b>Гибка металла</b> - это фундаментальный процесс в металлообработке и обрабатывающей промышленности. Он включает в
-    себя придание формы металлическому объекту путем приложения давления для его деформации.
-    В момент гибки металла - происходит процесс преобразования металлического объекта в определенную форму путем
-    манипулирования его физическими свойствами. Наиболее часто используемыми металлами для гибки являются алюминий,
-    сталь и медь, благодаря их высокой пластичности.
-    Процесс гибки металла включает три основных этапа: настройку оборудования, формовку металла и отделку изделия.
-    Оборудование, используемое для гибки металла, включает гидравлические листогибочные прессы, листогибы и гибочные
-    станки, вальцы, трубогибы.
-</p>
-<p>Техника гибки металла зависит от типа используемого металла и желаемой формы изделия. Некоторые из наиболее
-    распространенных методов включают</p>
-<h3>Гибка на листогибочном прессе</h3>
-<p>Гибка на листогибочном прессе - это метод, при котором гидравлический пресс оказывает давление на металлический
-    объект, заставляя его сгибаться в определенную форму. Эта техника идеально подходит для создания сложных форм и
-    углов.</p>
+<p>Формируем сталь по вашему образцу. Гибкость и точность – наши ключевые черты для создания качественных металлических изделий.</p>
+
+<p><strong>Гибка металла</strong> - это фундаментальный процесс в металлообработке и обрабатывающей промышленности. Он включает в себя придание формы металлическому объекту путем приложения давления для его деформации. В момент гибки металла - происходит процесс преобразования металлического объекта в определенную форму путем манипулирования его физическими свойствами. Наиболее часто используемыми металлами для гибки являются алюминий, сталь и медь, благодаря их высокой пластичности. Процесс гибки металла включает три основных этапа: настройку оборудования, формовку металла и отделку изделия. Оборудование, используемое для гибки металла, включает гидравлические листогибочные прессы, листогибы и гибочные станки, вальцы, трубогибы.</p>
+<p>Техника гибки металла зависит от типа используемого металла и желаемой формы изделия. Некоторые из наиболее распространенных методов включают:</p>
+
+<h2>Гибка на листогибочном прессе</h2>
+
+<p>Гибка на листогибочном прессе - это метод, при котором гидравлический пресс оказывает давление на металлический объект, заставляя его сгибаться в определенную форму. Эта техника идеально подходит для создания сложных форм и углов.</p>
 <p>Гибка металла имеет множество применений в различных отраслях промышленности, включая:</p>
-<h4>Строительство</h4>
-<p>Гибка металла обычно используется в строительной отрасли для создания металлических каркасов зданий, мостов и других
-    конструкций.</p>
-<h4>Автомобильная промышленность</h4>
-<p>Гибка металла используется в автомобильной промышленности для производства различных деталей, включая выхлопные
-    системы, рамы и компоненты подвески.</p>
-<h4>Аэрокосмическая промышленность</h4>
-<p>В аэрокосмической промышленности гибка металла используется для изготовления деталей самолетов и космических
-    аппаратов, включая крылья, фюзеляжи и компоненты двигателей.</p>
-<h4>Изготовление металлоконструкций</h4>
-<p>Гибка металла является важной частью производства металлоконструкций, используемых для создания различных изделий,
-    включая мебель, скульптуры и декоративные элементы.</p>
-<h4>Электроника</h4>
-<p>Гибка металла используется в электронной промышленности для производства различных компонентов, включая корпуса,
-    радиаторы и шасси.</p>
 
-<p><b>Гибка металла </b> - это жизненно важный процесс в металлообрабатывающей и обрабатывающей промышленности, в
-    котором используются различные методы и инструменты для придания металлическим предметам определенных форм. От
-    строительства и автомобильной промышленности до производства металла и электроники, гибка металла имеет множество
-    применений в различных отраслях. По мере развития технологий гибка металла будет развиваться, позволяя создавать еще
-    более сложные формы.</p>
+<h2>Строительство</h2>
+<p>Гибка металла обычно используется в строительной отрасли для создания металлических каркасов зданий, мостов и других конструкций.</p>
 
-<p><strong>Преимущества услуг нашей компании</strong></p>
-<p>АО «Главтехконструкция» предлагает профессиональные услуги. Преимуществам сотрудничества с нами является:</p>
+<h2>Автомобильная промышленность</h2>
+<p>Гибка металла используется в автомобильной промышленности для производства различных деталей, включая выхлопные системы, рамы и компоненты подвески.</p>
+
+<h2>Аэрокосмическая промышленность</h2>
+<p>В аэрокосмической промышленности гибка металла используется для изготовления деталей самолетов и космических аппаратов, включая крылья, фюзеляжи и компоненты двигателей.</p>
+
+<h2>Изготовление металлоконструкций</h2>
+<p>Гибка металла является важной частью производства металлоконструкций, используемых для создания различных изделий, включая мебель, скульптуры и декоративные элементы.</p>
+
+<h2>Электроника</h2>
+<p>Гибка металла используется в электронной промышленности для производства различных компонентов, включая корпуса, радиаторы и шасси.</p>
+
+<p><strong>Гибка металла</strong> - это жизненно важный процесс в металлообрабатывающей и обрабатывающей промышленности, в котором используются различные методы и инструменты для придания металлическим предметам определенных форм. От строительства и автомобильной промышленности до производства металла и электроники, гибка металла имеет множество применений в различных отраслях. По мере развития технологий гибка металла будет развиваться, позволяя создавать еще более сложные формы.</p>
+
+<h2>Преимущества услуг нашей компании</h2>
+
+<p>АО «Главтехконструкция» предлагает профессиональные услуги. Преимуществом сотрудничества с нами является:</p>
 <ol>
-    <li>Новое современное оборудование позволяет быстро и качественно выполнить объёмы выпускаемой продукции,.</li>
-    <li>Высокая производительность оборудования и большие площади предприятия, позволяют брать крупные заказы и
-        выполнять их качественно в максимально сжатые сроки.</li>
-    <li>Опытные высококвалифицированные специалисты обладают большим опытом работы, что гарантирует высокое качество.
-    </li>
+    <li>Новое современное оборудование позволяет быстро и качественно выполнить объёмы выпускаемой продукции.</li>
+    <li>Высокая производительность оборудования и большие площади предприятия, позволяют брать крупные заказы и выполнять их качественно в максимально сжатые сроки.</li>
+    <li>Опытные высококвалифицированные специалисты обладают большим опытом работы, что гарантирует высокое качество.</li>
 </ol>
 
-<p>Широкий ассортимент услуг:</p>
+<p><strong>Широкий ассортимент услуг:</strong></p>
+
 <ul>
     <li>Порошковое окрашивание;</li>
     <li>Гибка металла;</li>
@@ -54,4 +43,5 @@
     <li>Дробеструйная очистка;</li>
     <li>Лазерная сварка металла.</li>
 </ul>
+
 <p>Все производимые заказы выполняются строго по договору, с учетом требования заказчика.</p>
