--- a/public/data_src/services/poroshok_color/text.html
+++ b/public/data_src/services/poroshok_color/text.html
@@ -1,55 +1,47 @@
-<p><b>Порошковая краска</b> - это современный метод покрытия, наносимый в виде сухого порошка. В отличие от обычной
-    жидкой краски, порошковое покрытие наносится электростатическим способом, а затем расплавляется и отверждается под
-    воздействием тепла. На сегодняшний день большинство строительных и машиностроительных отраслей перешли на метод
-    порошкового окрашивания. Порошковые составы созданы на основе полимерных смол в сочетании с пигментами,
-    выравнивающими агентами, модификаторами потока, отвердителями, а также другими добавками. Эти ингредиенты
-    смешиваются, расплавляются, охлаждаются, при этом процессе получается однородное покрытие. Порошковое окрашивание
-    получается более твёрдым, прочным, износостойким, чем обычное ЛКП,а также окрашенная поверхность имеет более
-    гладкую, полированную поверхность. Чаще всего производится порошковая покраска металлических предметов.
-</p>
+<p>Наносим защитное покрытие высокого качества. Яркие оттенки и стойкость к воздействию – ваше долговечное решение.</p>
 
-<h3>Каковы преимущества порошковой краски?</h3>
+<p><strong>Порошковая краска</strong> - это современный метод покрытия, наносимый в виде сухого порошка. В отличие от обычной жидкой краски, порошковое покрытие наносится электростатическим способом, а затем расплавляется и отверждается под воздействием тепла. На сегодняшний день большинство строительных и машиностроительных отраслей перешли на метод порошкового окрашивания. Порошковые составы созданы на основе полимерных смол в сочетании с пигментами, выравнивающими агентами, модификаторами потока, отвердителями, а также другими добавками. Эти ингредиенты смешиваются, расплавляются, охлаждаются, при этом процессе получается однородное покрытие. Порошковое окрашивание получается более твёрдым, прочным, износостойким, чем обычное ЛКП, а также окрашенная поверхность имеет более гладкую, полированную поверхность. Чаще всего производится порошковая покраска металлических предметов.</p>
+
+<h2>Каковы преимущества порошковой краски?</h2>
+
 <p>Порошковая краска обладает уникальным набором преимуществ:</p>
+
 <ul>
-    <li>При её нанесении не будет никаких дефектов, свойственных жидкой краске (к примеру, полос или подтёков).
-        Порошковая покраска способна создавать гораздо более толстые покрытия по сравнению с обычным окрашиванием, без
-        просадки и провисания.</li>
-    <li>Отсутствие растворителей — означает отсутствие летучих органических соединений (VOCs), токсичных для маляра,
-        вредных для окружающей среды.</li>
+    <li>При её нанесении не будет никаких дефектов, свойственных жидкой краске (к примеру, полос или подтёков). Порошковая покраска способна создавать гораздо более толстые покрытия по сравнению с обычным окрашиванием, без просадки и провисания.</li>
+    <li>Отсутствие растворителей — означает отсутствие летучих органических соединений (VOCs), токсичных для маляра, вредных для окружающей среды.</li>
     <li>Широкий спектр специальных эффектов текстуры легко достигается порошковой покраской.</li>
     <li>Время затвердевания порошковых красок значительно быстрее по сравнению с жидкими аналогами.</li>
     <li>За один проход можно наносить 60–80 микрон. Это эквивалентно распылению 3 слоёв жидким способом.</li>
-    <li>Порошковая покраска обеспечивает лучшие эксплуатационные свойства, чем обычное окрашивание. Оно более устойчиво
-        к сколам, царапинам, другому износу. Дополнительно к своей физической прочности, порошковое покрытие
-        обеспечивает превосходное сохранение цвета.</li>
-    <li>Порошковая покраска не требует высокой квалификации, может быть выполнена практически любым человеком или даже
-        автоматизирована.</li>
+    <li>Порошковая покраска обеспечивает лучшие эксплуатационные свойства, чем обычное окрашивание. Оно более устойчиво к сколам, царапинам, другому износу. Дополнительно к своей физической прочности, порошковое покрытие обеспечивает превосходное сохранение цвета.</li>
+    <li>Порошковая покраска не требует высокой квалификации, может быть выполнена практически любым человеком или даже автоматизирована.</li>
+
 </ul>
-<p>Порошковое краска очень долговечна, так как при нагреве в печи получается твёрдое полимерное покрытие. Различные
-    составы обладают различной устойчивостью к атмосферным воздействиям, ультрафиолетовым лучам, химическому
-    воздействию, физическому износу. Порошковое покрытие сохраняется до 15–20 лет, в зависимости от качества
-    предварительной обработки, типа продукта. При этом нужно понимать, что порошковая краска не чудо-средство от
-    типичных проблем ЛКП. На неё также действует ультрафиолетовое излучение, а также разрушающие факторы окружающей
-    среды.</p>
-<h3>Сфера применения</h3>
+
+<p>Порошковая краска очень долговечна, так как при нагреве в печи получается твёрдое полимерное покрытие. Различные составы обладают различной устойчивостью к атмосферным воздействиям, ультрафиолетовым лучам, химическому воздействию, физическому износу. Порошковое покрытие сохраняется до 15–20 лет, в зависимости от качества предварительной обработки, типа продукта. При этом нужно понимать, что порошковая краска не чудо-средство от типичных проблем ЛКП. На неё также действует ультрафиолетовое излучение, а также разрушающие факторы окружающей среды.</p>
+
+<h2>Сфера применения</h2>
+
 <p>Нанесение полимерного состава широко востребовано в разных сферах промышленности:</p>
+
 <ul>
     <li>Автомобильной;</li>
     <li>Архитектурной;</li>
     <li>Мебельной;</li>
-    <li>Электротехнической;</li>
+    <li>Электротехнической.</li>
 </ul>
+
 <p>Сфера применения постоянно расширяется благодаря положительным качествам данного покрытия и товарного вида.</p>
-<p><strong>Преимущества услуг нашей компании</strong></p>
-<p>АО «Главтехконструкция» предлагает профессиональные услуги. Преимуществам сотрудничества с нами является:</p>
+
+<h2>Преимущества услуг нашей компании</h2>
+
+<p>АО «Главтехконструкция» предлагает профессиональные услуги. Преимуществом сотрудничества с нами является:</p>
 <ol>
-    <li>Новое современное оборудование позволяет быстро и качественно выполнить объёмы выпускаемой продукции,.</li>
-    <li>Высокая производительность оборудования и большие площади предприятия, позволяют брать крупные заказы и
-        выполнять их качественно в максимально сжатые сроки.</li>
-    <li>Опытные высококвалифицированные специалисты обладают большим опытом работы, что гарантирует высокое качество.
-    </li>
+    <li>Новое современное оборудование позволяет быстро и качественно выполнить объёмы выпускаемой продукции.</li>
+    <li>Высокая производительность оборудования и большие площади предприятия, позволяют брать крупные заказы и выполнять их качественно в максимально сжатые сроки.</li>
+    <li>Опытные высококвалифицированные специалисты обладают большим опытом работы, что гарантирует высокое качество.</li>
 </ol>
-<p>Широкий ассортимент услуг:</p>
+
+<p><strong>Широкий ассортимент услуг:</strong></p>
 <ul>
     <li>Порошковое окрашивание;</li>
     <li>Гибка металла;</li>
@@ -57,4 +49,5 @@
     <li>Дробеструйная очистка;</li>
     <li>Лазерная сварка металла.</li>
 </ul>
+
 <p>Все производимые заказы выполняются строго по договору, с учетом требования заказчика.</p>
