--- a/public/data_src/services/cold_stamps/text.html
+++ b/public/data_src/services/cold_stamps/text.html
@@ -16,7 +16,7 @@
 <p>АО «Главтехконструкция» предлагает профессиональные услуги. Преимуществом сотрудничества с нами является:</p>
 <ol>
     <li>Новое современное оборудование позволяет быстро и качественно выполнить объёмы выпускаемой продукции.</li>
-    <li></li>Высокая производительность оборудования и большие площади предприятия, позволяют брать крупные заказы и выполнять их качественно в максимально сжатые сроки.</li>
+    <li>Высокая производительность оборудования и большие площади предприятия, позволяют брать крупные заказы и выполнять их качественно в максимально сжатые сроки.</li>
     <li>Опытные высококвалифицированные специалисты обладают большим опытом работы, что гарантирует высокое качество.</li>
 </ol>
 
